Fix social icons misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,14 +132,13 @@ footer.page-footer {
 
 .list-inline {
   padding-left: 0;
-  margin-left: -5px;
   list-style: none;
 }
 
 .list-inline > li {
   display: inline-block;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .social {
@@ -147,8 +146,6 @@ footer.page-footer {
 }
 
 .social > li a {
-  padding-left: 20px;
-  padding-right: 20px;
   color: #fff;
 }
   .social > li a:Hover, .social > li a.active {
